test/scc_test/decl/semantic-errors/040.a
040.t:3:18: error: invalid use of 'restrict'